# nonebot-plugin-mongodb

./: .gitignore  README.md  bot.py  pyproject.toml
example/: __init__.py  beanie_usage.py
nonebot_plugin_mongodb/: __init__.py  config.py
